--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
+    "mini-css-extract-plugin": "^0.7.0",
+    "node-sass": "^4.12.0",
     "sass": "^1.20.3",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.10",
