--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "scripts": {
     "serve": "webpack --env.NODE_ENV=development --p && vue-cli-service serve",
-    "build": "webpack --env.NODE_ENV=production --progress",
+    "build": "webpack --env.NODE_ENV=production --progress && vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
     "css-loader": "^2.1.1",
-    "d3": "^5.9.2",
     "file-loader": "^3.0.1",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
