--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "webpack --env.NODE_ENV=development --p && vue-cli-service serve",
-    "build": "webpack --env.NODE_ENV=production --progress && vue-cli-service build",
+    "serve": "webpack process.env.NODE_ENV=development --p && vue-cli-service serve",
+    "build": "webpack export NODE_ENV=production --progress && vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
