--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "webpack --p && process.env.NODE_ENV=development && vue-cli-service serve",
-    "build": "export NODE_ENV=production && vue-cli-service build",
+    "serve": "webpack --p && NODE_ENV=development && vue-cli-service serve",
+    "build": "export NODE_ENV=production || set NODE_ENV=production && vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
