--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "webpack --p && NODE_ENV=development && vue-cli-service serve",
+    "serve": "export NODE_ENV=production || set NODE_ENV=production && vue-cli-service serve",
     "build": "export NODE_ENV=production || set NODE_ENV=production && vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
